tests/baselines/reference/parserForInStatement1.d.errors.txt
parserForInStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.
parserForInStatement1.d.ts(1,15): error TS2304: Cannot find name 'e'.


==== parserForInStatement1.d.ts (2 errors) ====
    for (var i in e) {
    ~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
                  ~
!!! error TS2304: Cannot find name 'e'.
    }